--- a/public/client-portal.html
+++ b/public/client-portal.html
@@ -339,6 +339,11 @@
           </div>
 
           <div class="form-group">
+            <label for="register-phone">Phone Number <span style="color: #71717a; font-weight: 400;">(optional - for SMS notifications)</span></label>
+            <input type="tel" id="register-phone" autocomplete="tel" placeholder="+1 (555) 123-4567">
+          </div>
+
+          <div class="form-group">
             <label for="register-password">Create Password</label>
             <input type="password" id="register-password" required autocomplete="new-password" placeholder="Minimum 6 characters" minlength="6">
           </div>
@@ -485,6 +490,7 @@
             code: document.getElementById('register-code').value,
             name: document.getElementById('register-name').value,
             email: document.getElementById('register-email').value,
+            phone: document.getElementById('register-phone').value || null,
             password: document.getElementById('register-password').value
           })
         });
